# self-proving-models

./: .gitignore  README.md  lint.sh  post-commit.sh  pyproject.toml
figs/: annot_vert.py  annotation.py  diff_bases.py
runs/: annot_len.sh  diff_bases.yaml
spm/: __init__.py  eval.py  systematic_models.py  train.py  train_diff_bases.py  utils.py
spm/data/: generate_data.py  samplers.py  samples.py  str_repr.py  tensor_repr.py
spm/gpt/: config.py  model.py  rlvf_trainer.py  trainer.py
tests/: dry_run.sh  test_gcd.py
